Fixed search results disappearing on iOS

--- a/_assets/stylesheets/_menu.scss
+++ b/_assets/stylesheets/_menu.scss
@@ -58,6 +58,7 @@
   @include shift(1);
   font-size: $base-font-size * 1.33;
   margin-top: 2rem;
+  position: relative;
 
   a {
     color: text-color(light);
